--- a/mix_server/config/sunzistrano/files/etc/nginx/sites-available/{stage}.esh.erb
+++ b/mix_server/config/sunzistrano/files/etc/nginx/sites-available/{stage}.esh.erb
@@ -1,6 +1,11 @@
 server {
-  listen 80 deferred;
-  listen [::]:80 deferred;
+  <%- if sun.server_ssl %>
+    listen 443 ssl http2 deferred;
+    listen [::]:443 ssl http2 deferred;
+  <%- else -%>
+    listen 80 deferred;
+    listen [::]:80 deferred;
+  <%- end -%>
 
   server_name '${server_host}';
   access_log /var/log/nginx/${stage}.access.log mix_server_access_log;
@@ -33,11 +38,6 @@ server {
 
   $nginx_early_return
 
-  <%- if sun.server_ssl %>
-    listen 443 ssl http2 deferred;
-    listen [::]:443 ssl http2 deferred;
-  <%- end -%>
-
   <%- if sun.passenger -%>
     location /packs/ {
       gzip_static on;
@@ -68,13 +68,25 @@ server {
   <%- end -%>
 }
 
-<%- if sun.nginx_redirects.present? -%>
+<%- if sun.server_ssl -%>
   server {
     listen 80;
     listen [::]:80;
+
+    server_name '${server_host}';
+
+    return 301 https://\$server_name\$request_uri;
+  }
+<%- end -%>
+
+<%- if sun.nginx_redirects.present? -%>
+  server {
     <%- if sun.server_ssl -%>
       listen 443 ssl;
       listen [::]:443 ssl;
+    <%- else -%>
+      listen 80;
+      listen [::]:80;
     <%- end -%>
 
     server_name '${server_host}';
