- preload_icons and preload_fonts helper added; - include bootstrap-icons css; - moved ascii functions into index.coffee;

--- a/ext_css/lib/javascript/stylesheets/all.css
+++ b/ext_css/lib/javascript/stylesheets/all.css
@@ -2,5 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "bootstrap-icons/font/bootstrap-icons";
 @import "@@vendor/tailwindcss-rails/stylesheets/inter-font";
 @import "@@lib/ext_css/stylesheets/theming";
